--- a/src/app/bussines/sidebar/sidebar.component.html
+++ b/src/app/bussines/sidebar/sidebar.component.html
@@ -144,7 +144,7 @@
             </button>
           </li>
           <li>
-            <button routerLink="/dashboard/categorias"
+            <button routerLink="/dashboard/categoria"
               routerLinkActive="bg-gradient-to-r from-blue-500 to-blue-600 text-white shadow-lg transform scale-105"
               class="w-full p-3 rounded-xl hover:bg-gradient-to-r hover:from-blue-400 hover:to-blue-500 hover:text-white transition-all duration-300 group">
               <div class="flex items-center text-left">
