--- a/src/app/bussines/finanzas/categoria/categoria.component.html
+++ b/src/app/bussines/finanzas/categoria/categoria.component.html
@@ -125,7 +125,7 @@
 
             <!-- Botón cerrar -->
             <button (click)="mostrarModalCategoria = false"
-                class="absolute top-6 right-6 w-12 h-12 flex items-center justify-center bg-white/20 text-white rounded-2xl hover:bg-white/30 transition-all duration-300 hover:rotate-90 backdrop-blur-sm">
+                class="z-14 absolute top-6 right-6 w-12 h-12 flex items-center justify-center bg-white/20 text-white rounded-2xl hover:bg-white/30 transition-all duration-300 hover:rotate-90 backdrop-blur-sm">
                 <i class="fas fa-times text-lg"></i>
             </button>
 
