--- a/src/app/bussines/finanzas/recordatorios/recordatorios.component.html
+++ b/src/app/bussines/finanzas/recordatorios/recordatorios.component.html
@@ -46,7 +46,7 @@
                         class="p-2 bg-blue-100 hover:bg-blue-200 text-blue-600 rounded-full transition-colors duration-200 hover:scale-110 transform">
                         <i class="fas fa-edit text-sm"></i>
                     </button>
-                    <button (click)="deleteRecordatorio(recordatorio.id)"
+                    <button (click)="deleteRecordatorio(recordatorio.id_recordatorio)"
                         class="p-2 bg-red-100 hover:bg-red-200 text-red-600 rounded-full transition-colors duration-200 hover:scale-110 transform">
                         <i class="fas fa-trash text-sm"></i>
                     </button>
